implement search with pg_search; add to docs
