# swagger/v1/swagger.json
@@ -22,7 +22,8 @@
             "required": false,
             "schema": {
               "type": "string"
-            }
+            },
+            "description": "The page number in a list of paginated results"
           },
           {
             "name": "per_page",
@@ -30,7 +31,8 @@
             "required": false,
             "schema": {
               "type": "string"
-            }
+            },
+            "description": "The number of results per page"
           },
           {
             "name": "filters",
@@ -44,9 +46,25 @@
                 },
                 "with_skill": {
                   "type": "string"
+                },
+                "by_global_admin": {
+                  "type": "boolean"
+                },
+                "by_receive_marketing": {
+                  "type": "boolean"
                 }
               }
-            }
+            },
+            "description": "Filter results by chosen fields. Filterable options are `by_timezone`, `with_skill`, `by_global_admin`, `by_receive_marketing`."
+          },
+          {
+            "name": "search",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Search for records with `email`, `name`, `timezone`, `external_id`, or `skills` matching your specified criteria."
           }
         ],
         "responses": {
